--- a/slider/templates/slideshow_js.html
+++ b/slider/templates/slideshow_js.html
@@ -1,4 +1,11 @@
 
+<link rel="stylesheet" href="{{ STATIC_URL }}slider/jquery.fancybox.min.css">
+<script src="{{ STATIC_URL }}slider/jquery.fancybox.min.js"></script>
+
+<link rel="stylesheet" href="{{ STATIC_URL }}slider/pgwslideshow.min.css">
+<link rel="stylesheet" href="{{ STATIC_URL }}slider/pgwslideshow_light.min.css">
+<script src="{{ STATIC_URL }}slider/pgwslideshow.min.js"></script>
+
 <script>
     $(window).on('load', function() {
         $('.pgwSlideshow').pgwSlideshow();
